shiny-server 1.5.4
--------------------------------------------------------------------------------

* Upgrade to Node.js v6.10.3.

* Upgrade to pandoc 1.17.2.

* Refactor scheduler code to make enforcement of connection limits more robust.

shiny-server 1.5.3
--------------------------------------------------------------------------------

* Upgrade to Node.js v6.10.0.

shiny-server 1.5.2
--------------------------------------------------------------------------------

* Add additional configuration directives `http_keepalive_timeout`,
  `sockjs_heartbeat_delay`, and `sockjs_disconnect_delay` to allow working
  with very slow connections and large SockJS payloads. (The default values
  for these options are the same as in previous versions of Shiny Server.)

shiny-server 1.5.1
--------------------------------------------------------------------------------

* Improve robustness with unfriendly proxy configurations. This had regressed
  some time between 1.4.3 and 1.4.7. (PR #263)

shiny-server 1.5.0
--------------------------------------------------------------------------------

* Upgrade to Node.js v6.6.0, and upgrade all npm dependencies. While no distinct
  features or significant bug fixes result from this upgrade, catching up to the
  current Node.js release is critical for the long-term health of our codebase.

* Fix bug where R processes would not be cleaned up if an HTTP request was
  prematurely closed.

shiny-server 1.4.7
--------------------------------------------------------------------------------

* Upgrade to Node.js v0.10.47 (security patches).

* Fix a minor bug where subapps being created after a disrupted-then-restored
  SockJS connection, might result in a duplicate connection.

* The bookmarkable state feature in Shiny v0.14 is now officially supported.
  Use the `bookmark_state_dir` directive to store bookmarked sessions in a
  specific location (default is /var/lib/shiny-server/bookmarks).

shiny-server 1.4.6