@@ -237,3 +237,11 @@ sanitize_errors {
   at $ server location;
   maxcount 1;
 }
+
+frame_options {
+  desc "Sets the X-Frame-Options header on URLs served from Shiny applications, to prevent the app from being embedded in a browser frame or iframe. This can be used as a mitigation for clickjacking attacks. If no option is provided, the default behavior is `allow`.";
+  param String value "One of `allow`, `deny`, `sameorigin`, or `allow-from` (case insensitive). (`allow` removes the X-Frame-Options header.)";
+  param String [url] "If `value` is `allow-from`, the URL from which framing should be allowed.";
+  at $ server location;
+  maxcount 1;
+}
