@@ -68,6 +68,9 @@ function parseApplication(settings, locNode, provideDefaults){
       locNode.getValues('preserve_logs').enabled){
     appSettings.preserveLogs = true;
   }
+  if (locNode.getOne('frame_options')) {
+    appSettings.frameOptions = parseFrameOptions(locNode.getOne('frame_options'));
+  }
 
   if (locNode.getOne('reconnect') &&
       locNode.getValues('reconnect').enabled === false) {
@@ -112,4 +115,26 @@ function parseApplication(settings, locNode, provideDefaults){
   }
 
   return settings;
+}
+
+exports.parseFrameOptions = parseFrameOptions;
+function parseFrameOptions(node) {
+  if (!node)
+    return void 0;
+
+  var frameOptions = node.values.value.toUpperCase();
+  if (frameOptions === 'DENY' || frameOptions === 'SAMEORIGIN') {
+    return frameOptions;
+  } else if (frameOptions === 'ALLOW') {
+    // Don't add frame options
+  } else if (frameOptions === 'ALLOW-FROM') {
+    var frameOptionsUrl = node.values.url;
+    if (/\s/.test(frameOptionsUrl)) {
+      throwForNode(node, new Error('Invalid URL'));
+    }
+    return frameOptions + " " + frameOptionsUrl;
+  } else {
+    throwForNode(node,
+      new Error('Invalid frame_options value: expected one of "allow", "deny", "sameorigin", or "allow-from <url>".'));
+  }
 }
